# QGIS-SAML2-Plugin

./: CMakeLists.txt  README.md  qgsauthsaml2edit.cpp  qgsauthsaml2edit.h  qgsauthsaml2edit.ui  qgsauthsaml2method.cpp  qgsauthsaml2method.h  qgsauthsamlmethod.pro  qgsauthsamlmethod_global.h
